--- a/package.json
+++ b/package.json
@@ -9,10 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/baloo-bhai-2": "^0.2.2",
+    "@expo-google-fonts/baloo-bhaijaan": "^0.0.2",
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
     "expo": "~46.0.9",
+    "expo-font": "~10.2.0",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.10.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-elements": "^3.4.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-svg": "12.3.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
