--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jwt-decode": "^3.1.2",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-animated-spinkit": "^1.5.2",
     "react-native-elements": "^3.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-svg": "12.3.0",
